k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      name: pod-webapp
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: __IMAGE__
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 60
