k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {APPNAME}-service
  labels:
    app: {APPNAME}
spec:
  type: NodePort
  selector:
    app: {APPNAME}
  ports:
   - protocol: TCP
     port: {PORT}
